# InChI

./: .devcontainer.json  .dockerignore  .gitignore  README.md
.github/actions/invariance_tests/: action.yml
.github/actions/regression_tests/: action.yml
.github/workflows/: ci.yml
INCHI-1-DOC/: CHANGELOG.md
INCHI-1-DOC/APIReference/: InChI_API_Reference.md
INCHI-1-DOC/FAQ/2019/FAQ/11. Other/: 11.8. Why inchi-1 executable instructed to convert InChI to structure with OutputSDF switch produces SDF MOL file containing no stereo information.md
INCHI-1-DOC/FAQ/2019/FAQ/13. InChIKey/: 13.3. InChIKey is based on hashed InChI85 but what is a hash.md
INCHI-1-DOC/FAQ/2019/FAQ/14. InChI by Examples/: 14.14. Why is s absent in the isotopic-stereo sub-layer in the example below.md
INCHI-1-DOC/FAQ/2019/FAQ/15. InChI Software/: 15.15. What are the structure perception options.md  15.16. What are the stereo interpretation options.md  15.17. What are the InChI creation options.md  15.21. What do the 91stereo interpretation92 options do.md
INCHI-1-DOC/FAQ/2019/FAQ/16. Creating InChIs/: 16.4. Does the InChI Software recognize atomic stereo descriptors in MOL SDF input files.md  16.5. Does the InChI Software ignore stereochemistry if a coordinate-less (0D) input file in MOL SDF format is used.md
INCHI-1-DOC/FAQ/2019/FAQ/6. Treating Mobile Hydrogens/: 6.4. If it seems that InChI does not recognize tatomerism in my molecule, what is the reason and how may this be corrected (if at all).md
INCHI-1-DOC/FAQ/2019/FAQ/8. Stereochemistry/: 8.5. It is not evident how the mark m0 or m1 is assigned in the stereochemistry t sub-layer85 so are these marks of any interest.md  8.6. Can InChI show unknown and undefined chiral centers differently.md
INCHI-1-DOC/UserGuide/: InChI_UserGuide.md
INCHI-1-SRC/: cmake_build_tool.bat  cmake_build_tool.sh
INCHI-1-SRC/INCHI_API/demos/inchi_main/gcc/: makefile  makefile32
INCHI-1-SRC/INCHI_API/demos/inchi_main/src/: CMakeLists.txt  e_0dstereo.c
INCHI-1-SRC/INCHI_API/demos/mol2inchi/src/: CMakeLists.txt  mol2inchi.c  moreutil.c
INCHI-1-SRC/INCHI_API/demos/python_sample/: mol2inchi.py  readme.txt  yapyinchi.py
INCHI-1-SRC/INCHI_API/demos/test_ixa/src/: CMakeLists.txt  moreutil.c  test_ixa.c
INCHI-1-SRC/INCHI_API/libinchi/gcc/: makefile  makefile32
INCHI-1-SRC/INCHI_API/libinchi/src/: CMakeLists.txt
INCHI-1-SRC/INCHI_API/libinchi/src/ixa/: ixa_builder.c  ixa_read_inchi.c
INCHI-1-SRC/INCHI_BASE/src/: ichi_bns.c  ichi_io.c  ichican2.c  ichicano.c  ichicans.c  ichierr.c  ichiprt1.c  ichiread.c  ichister.c  ichitaut.c  ikey_base26.h  ixa.h  mol_fmt4.c  readinch.c  runichi.c  runichi2.c  runichi3.c  sha2.c  strutil.c  util.c
INCHI-1-SRC/INCHI_EXE/inchi-1/gcc/: makefile  makefile32
INCHI-1-SRC/INCHI_EXE/inchi-1/src/: CMakeLists.txt  ichimain.c
INCHI-1-TEST/: Dockerfile  README.md  build_with_cmake.sh  build_with_makefile.sh  install_build_dependencies.sh  install_test_dependencies.sh
INCHI-1-TEST/tests/test_executable/: conftest.py
INCHI-1-TEST/tests/test_library/: test_multithreading.py
INCHI-1-TEST/tests/test_library/config/: config.invariance.py  config.regression.py  config.regression_reference.py
INCHI-1-TEST/tests/test_library/inchi_tests/: run_tests.py
